src/test/deca/context/invalid/resultats/test_selection_right_operand-cont.res
./src/test/deca/context/invalid/test_selection_right_operand.deca:19:3: The right identifier of the selection is not a field 
